chore: fixed overflow class after pseudo class

--- a/css/main.css
+++ b/css/main.css
@@ -72,11 +72,11 @@
   right: 0;
   height: 1em;
   width: 1em;
-  border: 0.01rem solid red;
+  max-height: 100%;
   color: red;
   padding: 0;
   box-sizing: border-box;
-  font-size: 1em;
+  font-size: 0.8em;
   text-align: center;
   line-height: 1em;
   background-color: white;
@@ -99,12 +99,13 @@
   background-color: black;
   color: white;
   border-radius: 0;
-  padding: 0.5em 4em 0.5em 0.5em;
+  padding: 0 1.5em 0 0.5em;
   box-sizing: border-box;
-  font-size: 0.3em;
+  max-height: 100%;
+  font-size: 0.8em;
   font-weight: 400;
   text-align: right;
-  line-height: 1.1em;
+  line-height: 1em;
   z-index: 2;
 }
 
